--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -37,7 +37,7 @@
     <footer class="post-footer">
       <span class="post-comment">
       <i class="fa fa-comment-o"></i>
-      <a href="{% url 'post_detail' slug=project.slug %}#disqus_thread"></a></span>
+      <a href="{% url 'project_detail' slug=project.slug %}#disqus_thread"></a></span>
       <div class="post-share">
         <div class="more-button">
           <i class="fa fa-share-alt"></i>
