--- a/myblog/static/css/style.css
+++ b/myblog/static/css/style.css
@@ -587,6 +587,7 @@ a.overlay {
   border-left: 1px solid #e4e8ea;
   display: inline-block;
   padding-left: 1em;
+  padding-bottom: 0.3em;
 }
 
 .post-footer a {
