--- a/myblog/static/css/style.css
+++ b/myblog/static/css/style.css
@@ -577,6 +577,7 @@ a.overlay {
 
 .post-footer .post-comment a {
   padding-right: 1em;
+  padding-bottom: 0.3em;
 }
 
 .post-footer .post-comment i {
