--- a/myblog/static/css/style.css
+++ b/myblog/static/css/style.css
@@ -582,6 +582,7 @@ a.overlay {
 
 .post-footer .post-comment i {
   margin-right: .5em;
+  padding-bottom: 0.3em;
 }
 
 .post-share {
@@ -1289,13 +1290,13 @@ available at: https://github.com/nsept/rippleria
 /* iphone 4,5,6 */
 @media only screen and (max-width: 384px) {
   .footer {
-    font-size: 0.8em;
+    font-size: 0.9em;
     padding: .7rem 0;
     width: 100%;
   }
 
   .copyright {
-    padding-right: 1.5em;
+    padding-right: 1.3em;
   }
 
   .card-btn {
