add image loading javascript

--- a/myblog/templates/blog/about.html
+++ b/myblog/templates/blog/about.html
@@ -22,7 +22,7 @@
   <div class=" mdl-cell mdl-cell--3-col mdl-cell--3-col-tablet mdl-cell--8-col-phone">
     <div class="profile-box mdl-grid">
       <div class="mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--8-col-phone">
-        <img id="about" src="{% static 'image/background/profile-about.png' %}" alt="profile" align="middle">
+        <img id="about" src="{% static 'image/background/profile-about.png' %}" alt="profile" align="middle" onload="imgLoaded(this)">
       </div>
     </div>
     <div class="contact-box mdl-grid">
