edit image size

--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -14,16 +14,20 @@
   .title {display: none;}
   .footer {display: none;}
   .large-header {display: none;}
+  .index-title {display: none;}
 </style>
 
 <script>
-$('.title').fadeIn(1500,function() {
-    $('.large-header').fadeIn(2000,function() {
+$('.title').fadeIn(500,function() {
+    $('.index-title').fadeIn(1000,function() {
+      $('.large-header').fadeIn(1200)
       $('.footer').fadeIn(2000);
     });
 });
 </script>
 
+
+<!--img id="bg" src="{% static 'image/background/profile-index.png' %}" align="right" onload="imgLoaded(this)"-->
 <div id="large-header" class="large-header">
   <canvas id="demo-canvas">
   </canvas>
