--- a/myblog/templates/blog/project_list.html
+++ b/myblog/templates/blog/project_list.html
@@ -12,7 +12,7 @@
    <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-phone">
       <figure class="pr-card" style="background: {{project.category.color}}">
-         <img class="" src=" {{ project.image.url }} ">
+         <img class="" src="{{ project.image.url }}" onload="imgLoaded(this)"/>
          <figcaption>
             <img class="svg pr-category-icon" src="{% static project.category.image_url %}">
             <h3>{{ project.category }}</h3>
@@ -26,7 +26,7 @@
    {% if forloop.last or forloop.counter|divisibleby:"2" %}
    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-phone">
       <figure class="pr-card" style="background: {{project.category.color}}">
-         <img src=" {{ project.image.url }} ">
+         <img class="" src="{{ project.image.url }}" onload="imgLoaded(this)"/>
          <figcaption>
             <img class="svg pr-category-icon" src="{% static project.category.image_url %}">
             <h3>{{ project.category }}</h3>
