--- a/myblog/static/css/text.css
+++ b/myblog/static/css/text.css
@@ -86,6 +86,7 @@ h1,h2,h3 {
   cursor: text;
   position: relative;
   font-family: 'Spoqa Han Sans','Spoqa Han Sans JP','Sans-serif';
+  border-bottom: 1px solid #cccccc;
   font-weight: 400;
 }
 
@@ -132,7 +133,7 @@ h6 tt,h6 code {
 }
 
 h1 {
-  font-size: 1.6em;
+  font-size: 1.8em;
   text-align: center;
 }
 
