--- a/myblog/static/css/style.css
+++ b/myblog/static/css/style.css
@@ -895,6 +895,10 @@ author: Zan Ilic
 available at: http://zanilic.com/periscope-likes-tutorial-jquery-css3
 */
 
+button.likes {
+  padding: 0;
+}
+
 .heart-particle-box {
   position: relative;
   width: 200px;
@@ -930,6 +934,8 @@ available at: http://zanilic.com/periscope-likes-tutorial-jquery-css3
   font-weight: 700;
   font-size: 0.8em;
   opacity: 1;
+  font-size: 13px;
+  color: #f55567;
 }
 
 .heart-particle {
@@ -949,6 +955,7 @@ available at: http://zanilic.com/periscope-likes-tutorial-jquery-css3
 .heart-particle-col {
   color: #f55567;
 }
+
 
 
 
@@ -1273,6 +1280,7 @@ available at: https://github.com/nsept/rippleria
     transform: translate(-50%,-50%);
     margin-bottom: -90px;
   }
+
   .previous {
     font-size: 0.8em;
   }
