--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -18,7 +18,6 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/text.css' %}" rel="stylesheet" type="text/css">
-    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
     <script>
     function imgLoaded(img){
     var $img = $(img);
@@ -69,6 +68,7 @@
     <script scr="//sujinlee.disqus.com/embed.js"></script>
     <script src="//sujinlee.disqus.com/count.js" id="dsq-count-scr" async></script>
     <script src="{% static 'js/prefixfree.min.js' %}"></script>
+    <script src="{% static 'js/jquery.cookie.js' %}"></script>
     <script src="{% static 'js/script.js' %}"></script>
     <script src="{% static 'js/highlight.pack.js' %}"></script>
     <script src="{% static 'js/social.js' %}"></script>
