--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -33,7 +33,7 @@
           Sujin Lee</a>
         </div>
         <nav class="Offscreen Nav-List">
-          <a href="#" class="Button">
+          <a href="#" class="Meun-Button">
           <i class="Menu-Bar Menu-Top"></i>
           <i class="Menu-Bar Menu-Middle"></i>
           <i class="Menu-Bar Menu-Bottom"></i>
@@ -81,6 +81,8 @@
   ga('create', 'UA-53782262-2', 'auto');
   ga('send', 'pageview');
 </script>
+    {% endblock %}
+    {% block jsblock2 %}
     {% endblock %}
   </body>
 </html>
