--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -17,15 +17,6 @@
   .index-title {display: none;}
 </style>
 
-<script>
-$('.title').fadeIn(500,function() {
-    $('.index-title').fadeIn(1000,function() {
-      $('.large-header').fadeIn(1200)
-      $('.footer').fadeIn(2000);
-    });
-});
-</script>
-
 <div id="large-header" class="large-header">
   <canvas id="demo-canvas">
   </canvas>
@@ -43,3 +34,13 @@ $('.title').fadeIn(500,function() {
 </div>
 <script src="/static/js/index.js"></script>
 {% endblock content %}
+{% block jsblock2 %}
+<script>
+$('.title').fadeIn(500,function() {
+    $('.index-title').fadeIn(1000,function() {
+      $('.large-header').fadeIn(1200)
+      $('.footer').fadeIn(2000);
+    });
+});
+</script>
+{% endblock %}
