--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load django_markdown %}
 {% block title %}
-<title>{{ post.title }}</title>
+<title>{{ project.title }}</title>
 {% endblock %}
 {% block ogtags %}
   <meta property="og:type" content="article" />
@@ -11,7 +11,7 @@
   <meta property="article:author" content="https://www.facebook.com/sujiniworld" />
   <meta property="og:description" content="{{ project.summary|truncatechars:230 }}" />
   <meta property="og:image"content="{{ project.image.url }}" />
-  <meta property="og:url" content="{% url 'proejct_detail' slug=project.slug %}" />
+  <meta property="og:url" content="{% url 'project_detail' slug=project.slug %}" />
 {% endblock %}
 {% block content %}
 <section class="page-name">
@@ -109,15 +109,30 @@
 </nav>
 <div class="go-top"><i class="fa fa-angle-up"></i></div>
 <script>
-  function fbshare(){
-      FB.ui({
-        method: 'share',
-        title: '{{ project.title }}',
-        href: 'http://sujinlee.me/project/{{project.slug }}',
-        {% if project.image %}
-       picture: 'http://sujinlee.me/{{ project.image.url }}', {% endif %}
-        caption: '{{ project.title }}',
-      }, function(response){});
-  }
+
+function fbshare() {
+    FB.ui({
+            method: 'share_open_graph',
+            action_type: 'og.shares',
+            action_properties: JSON.stringify({
+                object: {
+                    'og:url': '{% url '
+                    post_detail ' slug=project.slug %}', // your url to share
+                    'og:title': '{{ project.title }}',
+                    'og:description': '{{ project.summary }}',
+                    'og:image': '{{ project.image.url }}'
+                }
+            })
+        },
+        // callback
+        function(response) {
+            if (response && !response.error_message) {
+                // then get post content
+                alert('successfully posted. Status id : ' + response.project_id);
+            } else {
+                alert('Something went error.');
+            }
+        });
+}
 </script>
 {% endblock %}
