--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -114,8 +114,7 @@ function fbshare() {
             action_type: 'og.shares',
             action_properties: JSON.stringify({
                 object: {
-                    'og:url': '{% url '
-                    post_detail ' slug=post.slug %}', // your url to share
+                    'og:url': '{% url 'post_detail' slug=post.slug %}',
                     'og:title': '{{ post.title }}',
                     'og:description': '{{ post.summary }}',
                     'og:image': '{{ post.image.url }}'
