--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en" itemscope itemtype="http://schema.org/Blog">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,13 +21,13 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/text.css' %}" rel="stylesheet" type="text/css">
     <script>
-    function imgLoaded(img){
-    var $img = $(img);
-    $img.parent().addClass('loaded');
-};
+      function imgLoaded(img){
+      var $img = $(img);
+      $img.parent().addClass('loaded');
+      };
     </script>
-  {% block ogtags %}
-  {% endblock %}
+    {% block ogtags %}
+    {% endblock %}
   </head>
   <body itemscope itemtype="http://schema.org/Product">
     <div id="wrapper">
@@ -77,13 +77,13 @@
     <script>hljs.initHighlightingOnLoad();</script>
     <!--google-analytics-->
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-53782262-2', 'auto');
-  ga('send', 'pageview');
-</script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-53782262-2', 'auto');
+      ga('send', 'pageview');
+    </script>
     {% endblock %}
     {% block jsblock2 %}
     {% endblock %}
