--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="{{ post.title }}" />
   <meta property="article:author" content="https://www.facebook.com/sujiniworld" />
   <meta property="og:description" content="{{ project.summary|truncatechars:230 }}" />
-  <meta property="og:image"content="{{ project.image.url }}" />
+  <meta property="og:image" content="http://www.sujinlee.me/{{ project.image.url }}" />
   <meta property="og:url" content="http://sujinlee.me/project/{{ project.slug }}" />
 {% endblock %}
 {% block content %}
